# engagevoice/v1/model_campaign_lead.go
@@ -1,0 +1,57 @@
+/*
+ * RingCentral Engage Voice API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package engagevoice
+
+type CampaignLead struct {
+	Address1          string `json:"address1,omitempty"`
+	Address2          string `json:"address2,omitempty"`
+	AgentDispostion   string `json:"agentDispostion,omitempty"`
+	AuxData1          string `json:"auxData1,omitempty"`
+	AuxData2          string `json:"auxData2,omitempty"`
+	AuxData3          string `json:"auxData3,omitempty"`
+	AuxData4          string `json:"auxData4,omitempty"`
+	AuxData5          string `json:"auxData5,omitempty"`
+	AuxExternalUrl    string `json:"auxExternalUrl,omitempty"`
+	AuxGreeting       string `json:"auxGreeting,omitempty"`
+	AuxPhone          string `json:"auxPhone,omitempty"`
+	CallerId          string `json:"callerId,omitempty"`
+	City              string `json:"city,omitempty"`
+	DupeKeyOverride   int64  `json:"dupeKeyOverride,omitempty"`
+	Email             string `json:"email,omitempty"`
+	ExternId          string `json:"externId,omitempty"`
+	ExtraData         string `json:"extraData,omitempty"`
+	FirstName         string `json:"firstName,omitempty"`
+	GateKeeper        string `json:"gateKeeper,omitempty"`
+	Id                int64  `json:"id,omitempty"`
+	LastName          string `json:"lastName,omitempty"`
+	LastPassDispo     string `json:"lastPassDispo,omitempty"`
+	LeadId            int64  `json:"leadId,omitempty"`
+	LeadPasses        int32  `json:"leadPasses,omitempty"`
+	LeadPhone         string `json:"leadPhone,omitempty"`
+	LeadState         string `json:"leadState,omitempty"`
+	LeadTimezone      string `json:"leadTimezone,omitempty"`
+	LiveAnswerMessage string `json:"liveAnswerMessage,omitempty"`
+	// Date-time in Java format. Example: `2019-01-01T01:01:01.000+0000`. Note this is not compatible with RFC-3339 which is used by OpenAPI 3.0 Spec because it doesn't have a `:` between hours and minutes.
+	LoadedDts         string `json:"loadedDts,omitempty"`
+	MachAnswerMessage string `json:"machAnswerMessage,omitempty"`
+	MaxPasses         int32  `json:"maxPasses,omitempty"`
+	MidName           string `json:"midName,omitempty"`
+	Name              string `json:"name,omitempty"`
+	// Date-time in Java format. Example: `2019-01-01T01:01:01.000+0000`. Note this is not compatible with RFC-3339 which is used by OpenAPI 3.0 Spec because it doesn't have a `:` between hours and minutes.
+	NextDialTime         string `json:"nextDialTime,omitempty"`
+	SortCol              string `json:"sortCol,omitempty"`
+	SpeedToLeadAgentConn int32  `json:"speedToLeadAgentConn,omitempty"`
+	SpeedToLeadFirstPass int32  `json:"speedToLeadFirstPass,omitempty"`
+	State                string `json:"state,omitempty"`
+	Suffix               string `json:"suffix,omitempty"`
+	Suppressed           bool   `json:"suppressed,omitempty"`
+	Title                string `json:"title,omitempty"`
+	Zip                  string `json:"zip,omitempty"`
+}
